[package]
name = "pca9956b"
version = "0.1.1"
authors = ["Piers Finlayson <piers@packom.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/packom/pca9956b"
documentation = "https://github.com/packom/pca9956b"
homepage = "https://github.com/packom/pca9956b"
description = "A RESTful HTTP microservice for controlling PCA9956B devices"
readme = "README.md"
keywords = ["i2c","pca9956","openapi","swagger","http"]
categories = ["api-bindings","hardware-support","network-programming","embedded","web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "packom/pca9956b", branch = "master" }

[dependencies]
httpd-util = "0.1.3"
i2cbus-api = "0.1.5"
pca9956b-api = "0.1.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = {version = "0.11"}
hyper-tls = {version = "0.1.2"}
swagger = "1.0.1"
lazy_static = "0.2"
log = "0.4.6"
mime = "0.3.3"
multipart = {version = "0.13.3"}
native-tls = {version = "0.1.4"}
percent-encoding = {version = "1.0.0"}
regex = {version = "0.2"}
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.0.4"}
serde_json = {version = "1.0", optional = true}
serde_urlencoded = {version = "0.5.1"}
tokio-core = {version = "0.1.6"}
tokio-proto = {version = "0.1.1"}
tokio-tls = {version = "0.1.3", features = ["tokio-proto"]}
url = {version = "1.5"}
uuid = {version = "0.5", features = ["serde", "v4"]}
error-chain = "0.12"
nix = "0.11.0"
static_assertions = "0.3.1"

[dev-dependencies]
clap = "2.25"
error-chain = "0.12"

