[package]
name = "pca9956b"
version = "0.1.2"
authors = ["Piers Finlayson <piers@packom.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/packom/pca9956b"
documentation = "https://github.com/packom/pca9956b"
homepage = "https://github.com/packom/pca9956b"
description = "A RESTful HTTP microservice for controlling PCA9956B devices"
readme = "README.md"
keywords = ["i2c","pca9956","openapi","swagger","http"]
categories = ["api-bindings","hardware-support","network-programming","embedded","web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "packom/pca9956b", branch = "master" }

[dependencies]
httpd-util = "0.1"
i2cdev2 = "0.4.0"
i2cbus-api = {version = "0.1.8"}
pca9956b-api = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1" # 0.3 incompatible
hyper = {version = "0.12"} # 0.13 incompatible
swagger = "4.0"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
multipart = {version = "0.16"}
native-tls = {version = "0.2"}
percent-encoding = {version = "2"}
regex = {version = "1"}
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.1"}
serde_json = {version = "1.0", optional = true}
serde_urlencoded = {version = "0.6"}
tokio = "0.1.17" # 0.2 incompatible
tokio-openssl = "0.3" # No tokio_openssl::SslAcceptorExt in 0.4
url = {version = "2"}
uuid = {version = "0.8", features = ["serde", "v4"]}
error-chain = "0.12"
nix = "0.11.0" # i2cdev2 incompatible with nix 0.17
static_assertions = "0.3.1"
openssl = {version = "0.10"}

[dev-dependencies]
clap = "2"
error-chain = "0.12"

